   - Added monit filter thanks Jason H Martin.


- Enhancements
   * Fail2ban-regex - add print-all-matched option. Closes gh-652
   * Suppress fail2ban-client warnings for non-critical config options
   * Match non "Bye Bye" disconnect messages for sshd locked account regex
   * Realign fail2ban log output with white space to improve readability. Does
     not affect SYSLOG output.

ver. 0.9.0 (2014/03/14) - beta
----------

Carries all fixes, features and enhancements from 0.8.13 (unreleased) with
major changes.

The minimum supported python version is now 2.6. If you have python-2.4 or 2.5
you can use the 0.8.12 version of fail2ban.

Please take note of release notes:
https://github.com/fail2ban/fail2ban/releases/tag/0.9.0

Please test your configuration before relying on it.

Nearly all development is thanks to Steven Hiscocks (THANKS!), merging,
testcases and timezone support from Daniel Black, and code-review and minor
additions from Yaroslav Halchenko.

- Refactoring (IMPORTANT -- Please review your setup and configuration):
   * [..bddbf1e] jail.conf was heavily refactored and now is similar
     to how it looked on Debian systems:
     - default action could be configured once for all jails
     - jails definitions only provide customizations (port, logpath)
     - no need to specify 'filter' if name matches jail name
   * [..5aef036] Core functionality moved into fail2ban/ module.
     Closes gh-26
     - tests included in module to aid testing and debugging
   * Added fail2ban persistent database
     - default location at /var/lib/fail2ban/fail2ban.sqlite3
     - allows active bans to be reinstated on restart
     - log files read from last position after restart
   * Added systemd journal backend
     - Dependency on python-systemd
     - New "journalmatch" option added to filter configs files
     - New "systemd-journal" option added to fail2ban-regex
   * Added python3 support
   * Support %z (Timezone offset) and %f (sub-seconds) support for