@@ -112,3 +112,10 @@ def getF2BLogger(name):
 	"""Get logging.Logger instance with Fail2Ban logger name convention
 	"""
 	return logging.getLogger("fail2ban.%s" % name.rpartition(".")[-1])
+
+def fail2ban_excepthook(exctype, value, traceback):
+	"""Except hook used to log unhandled exceptions to Fail2Ban log
+	"""
+	logging.getLogger("fail2ban").critical(
+		"Unhandled exception in Fail2Ban:", exc_info=True)
+	return sys.__excepthook__(exctype, value, traceback)
